<resources>
    <string name="app_name">BookList</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="page">Page</string>
    <string name="pageC">PAGE</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="textview">TextView</string>
    <string name="page_counter">PAGE COUNTER</string>
    <string name="welcome_to_booklist">Welcome to BookList</string>
    <string name="whenever_you_read_a_good_book_somewhere_in_the_world_a_door_opens_to_allow_in_more_light_vera_nazarian">Whenever you read a good book, somewhere in the world a door opens to allow in more light. —Vera Nazarian</string>
    <string name="add_book">ADD BOOK</string>
    <string name="new_book">NEW BOOK</string>
    <string name="todo">TODO</string>
    <string name="language">LANGUAGE</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sign_in">SIGN IN</string>
    <string name="booklist">BookList</string>
    <string name="books">BOOKS</string>
    <string name="save">SAVE</string>
    <string name="Week">Week</string>
    <string name="Month">Month</string>
    <string name="Year">Year</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="add">ADD</string>
    <string name="hi">Hi,</string>
    <string name="pagetoast">Page number added successfully</string>

    <string name="ja">J</string>
    <string name="fe">F</string>
    <string name="ma">M</string>
    <string name="ap">A</string>
    <string name="my">M</string>
    <string name="ju">J</string>
    <string name="jl">J</string>
    <string name="au">A</string>
    <string name="se">S</string>
    <string name="oc">O</string>
    <string name="nv">N</string>
    <string name="de">D</string>

    <string name="mo">Mo</string>
    <string name="tu">Tu</string>
    <string name="we">We</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="sa">Sa</string>
    <string name="su">Su</string>

    <string-array name="quotes_array">
        <item>“There is no friend as loyal as a book.” \n- Ernest Hemingway </item>
        <item>“A great book should leave you with many experiences, and slightly exhausted at the end. You live several lives while reading.” \n- William Styron</item>
        <item>“When I have a little money, I buy books; and if I have any left, I buy food and clothes.” \n- Desiderius Erasmus Roterodamus</item>
        <item>“Books are my friends, my companions. They make me laugh and cry and find meaning in life.” \n-  Christopher Paolini </item>
        <item>“Books are like mirrors: if a fool looks in, you cannot expect a genius to look out.” \n-  J.K. Rowling</item>
    </string-array>

    <string name="selectlang">Select a Language</string>
    <string name="signedout">Signed out successfully</string>
    <string name="deleteinfo">Book named %1$s will be deleted</string>
    <string name="areyousuredelete">Are you sure you want to delete the book?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="updateinfo">Book named %1$s will be updated</string>
    <string name="areyousureupdate">Are you sure you want to update the book?</string>
    <string name="deletesuccess">Book deleted successfully</string>
    <string name="updatesuccess">Book updated successfully</string>
    <string name="tildesignerror">Character \'~\' is not allowed</string>
    <string name="addsuccess">Book added successfully</string>
    <string name="deletedatasuccess">Data deleted successfully</string>
    <string name="deleteaccountsuccess">Account deleted successfully</string>
    <string name="deleteacc">Delete account</string>
    <string name="areyousuredeleteacc">Are you sure you want to delete the account? Your data will be deleted permanently</string>
    <string name="deletedata">Delete data</string>
    <string name="areyousuredeletedata">Are you sure you want to delete the data? Your data will be deleted permanently</string>
    <string name="less"><![CDATA[<]]></string>
    <string name="more"><![CDATA[>]]></string>
    <string name="monday">Monday</string>
</resources>