<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".BooksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:background="#d62828">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="17"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="19"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/author"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="22"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/page"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="22"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/price"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="20"
            android:fontFamily="@font/autour_one"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_weight="10"
        android:background="#112d4e"
        android:divider="#FFFFFF"
        android:dividerHeight="2px">

    </ListView>

</LinearLayout>