<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#112d4e"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".ReadStats">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <TextView
            android:id="@+id/monthly"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Month"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintStart_toStartOf="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/button4" />

        <TextView
            android:id="@+id/weekly"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Week"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintStart_toStartOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <TextView
            android:id="@+id/yearly"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/Year"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:translationZ="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintStart_toStartOf="@+id/button8"
            app:layout_constraintTop_toTopOf="@+id/button8" />

        <ImageButton
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/monthly"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.555" />

        <ImageButton
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/shape2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/monthly"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <TextView
            android:id="@+id/datetext"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/less"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/less"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/datetext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/more"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/datetext"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="85">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barchart"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>